<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <Button
        android:id="@+id/samples_main_select_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/samples_request_main"
        android:textColor="#ff707070"
        android:textSize="16sp"
        android:background="@drawable/samples_btn_bg"
        android:textAllCaps="false"
        android:alpha="1.0"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/guideline_samples_btn_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/samples_request_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/samples_request_qsn"
        android:textSize="16sp"
        android:layout_marginBottom="30dp"
        android:alpha="1.0"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/samples_main_select_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/mean_values_request_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mean_values_pose"
        android:textSize="16sp"
        android:layout_marginTop="80dp"
        android:alpha="1.0"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/guideline_samples_btn_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/mean_values_main_select_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mean_values_request_main"
        android:textSize="16sp"
        android:padding="10dp"
        android:background="@drawable/mean_values_btn_bg"
        android:layout_marginTop="30dp"
        android:textAllCaps="false"
        android:textColor="#ff707070"
        android:alpha="1.0"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/mean_values_request_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/sample_size_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/sample_size_hint"
        android:textColorHint="#707070"
        android:inputType="number"
        android:backgroundTint="#A71B82"
        android:scaleX="0.5"
        android:alpha="1.0"
        android:layout_marginLeft="30dp"
        app:layout_constraintStart_toEndOf="@+id/samples_main_select_btn"
        app:layout_constraintBottom_toBottomOf="@+id/samples_main_select_btn"
        app:layout_constraintTop_toTopOf="@+id/samples_main_select_btn"/>

    <Button
        android:id="@+id/samples_txt_req__ok_btn"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:background="@drawable/text_side_btn_bg"
        android:text="@string/ok"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="#ffffffff"
        android:alpha="1.0"
        app:layout_constraintBottom_toBottomOf="@+id/sample_size_edit"
        app:layout_constraintDimensionRatio="h,2:1"
        app:layout_constraintStart_toEndOf="@+id/sample_size_edit"
        app:layout_constraintTop_toTopOf="@+id/sample_size_edit" />

</android.support.constraint.ConstraintLayout>