<?xml version="1.0" encoding="utf-8"?>
<MotionScene
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/apk/res-auto">

    <Transition
        motion:constraintSetStart="@+id/mean_sample_state_1_start"
        motion:constraintSetEnd="@+id/mean_sample_state_1_end"
        motion:duration="400"
        motion:interpolator="easeOut"/>

    <ConstraintSet android:id="@+id/mean_sample_state_1_start">

        <Constraint
            android:id="@+id/samples_main_select_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/samples_request_main"
            android:textColor="#ff707070"
            android:textSize="16sp"
            android:background="@drawable/samples_btn_bg"
            android:textAllCaps="false"
            android:alpha="1.0"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/guideline_samples_btn_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Constraint
            android:id="@+id/samples_request_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/samples_request_qsn"
            android:textSize="16sp"
            android:layout_marginBottom="30dp"
            android:alpha="1.0"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/samples_main_select_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Constraint
            android:id="@+id/mean_values_request_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mean_values_pose"
            android:textSize="16sp"
            android:layout_marginTop="80dp"
            android:alpha="1.0"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/guideline_samples_btn_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Constraint
            android:id="@+id/mean_values_main_select_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mean_values_request_main"
            android:textSize="16sp"
            android:background="@drawable/mean_values_btn_bg"
            android:layout_marginTop="30dp"
            android:textAllCaps="false"
            android:textColor="#ff707070"
            android:alpha="1.0"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/mean_values_request_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Constraint
            android:id="@+id/mean_sample_number_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/sample_number_hint"
            android:backgroundTint="#A71B82"
            android:scaleX="0.5"
            android:alpha="1.0"
            android:layout_marginLeft="30dp"
            app:layout_constraintStart_toEndOf="@+id/mean_values_main_select_btn"
            app:layout_constraintTop_toTopOf="@+id/mean_values_main_select_btn"
            app:layout_constraintBottom_toBottomOf="@+id/mean_values_main_select_btn"/>

        <Constraint
            android:id="@+id/mean_edit_ok_btn"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:text="@string/ok"
            android:textColor="#ffffffff"
            android:textAllCaps="false"
            android:alpha="1.0"
            android:background="@drawable/text_side_btn_bg"
            android:textSize="18sp"
            app:layout_constraintDimensionRatio="h,2:1"
            app:layout_constraintStart_toEndOf="@+id/mean_sample_number_edit"
            app:layout_constraintTop_toTopOf="@+id/mean_sample_number_edit"
            app:layout_constraintBottom_toBottomOf="@+id/mean_sample_number_edit"/>

    </ConstraintSet>

    <ConstraintSet android:id="@+id/mean_sample_state_1_end">


        <Constraint
            android:id="@+id/samples_main_select_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/samples_request_main"
            android:textColor="#ff707070"
            android:textSize="16sp"
            android:background="@drawable/samples_btn_bg"
            android:textAllCaps="false"
            android:alpha="0.0"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/guideline_samples_btn_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Constraint
            android:id="@+id/samples_request_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/samples_request_qsn"
            android:textSize="16sp"
            android:layout_marginBottom="30dp"
            android:alpha="0.0"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/samples_main_select_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Constraint
            android:id="@+id/mean_values_request_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mean_values_pose"
            android:textSize="16sp"
            android:layout_marginTop="80dp"
            android:alpha="1.0"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/guideline_samples_btn_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Constraint
            android:id="@+id/mean_values_main_select_btn"
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:text="@string/back"
            android:textSize="16sp"
            android:padding="0dp"
            android:background="@drawable/mean_values_btn_bg"
            android:layout_marginTop="30dp"
            android:textAllCaps="false"
            android:textColor="#ff707070"
            android:alpha="1.0"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/mean_values_request_txt"
            app:layout_constraintStart_toStartOf="parent" />

        <Constraint
            android:id="@+id/mean_sample_number_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/sample_number_hint"
            android:backgroundTint="#A71B82"
            android:scaleX="1.0"
            android:alpha="1.0"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toEndOf="@+id/mean_values_main_select_btn"
            app:layout_constraintTop_toTopOf="@+id/mean_values_main_select_btn"
            app:layout_constraintBottom_toBottomOf="@+id/mean_values_main_select_btn"/>

        <Constraint
            android:id="@+id/mean_edit_ok_btn"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:text="@string/ok"
            android:textColor="#ffffffff"
            android:textAllCaps="false"
            android:alpha="1.0"
            android:background="@drawable/text_side_btn_bg"
            android:textSize="18sp"
            app:layout_constraintDimensionRatio="h,2:1"
            app:layout_constraintStart_toEndOf="@+id/mean_sample_number_edit"
            app:layout_constraintTop_toTopOf="@+id/mean_sample_number_edit"
            app:layout_constraintBottom_toBottomOf="@+id/mean_sample_number_edit"/>

    </ConstraintSet>

    <Transition
        motion:constraintSetStart="@+id/mean_sample_state_1_end"
        motion:constraintSetEnd="@+id/mean_sample_state_1_start"
        motion:duration="400"
        motion:interpolator="easeOut"/>

</MotionScene>