<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.motion.MotionLayout
        android:id="@+id/type_selection_motion_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="1.0"
        android:background="#ffffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/top_bar"
            android:layout_width="440dp"
            android:layout_height="0dp"
            android:background="#ffffffff"
            android:scaleType="fitXY"
            app:layout_constraintDimensionRatio="h,6:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/top_bar" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_samples_btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.55" />

        <Button
            android:id="@+id/samples_main_select_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/samples_request_main"
            android:textColor="#ff707070"
            android:textSize="16sp"
            android:padding="10dp"
            android:background="@drawable/samples_btn_bg"
            android:textAllCaps="false"
            android:alpha="0.0"
            android:visibility="invisible"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_samples_btn_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/samples_request_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/samples_request_qsn"
            android:textSize="16sp"
            android:layout_marginBottom="30dp"
            android:alpha="0.0"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/samples_main_select_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/mean_values_request_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mean_values_pose"
            android:textSize="16sp"
            android:layout_marginTop="80dp"
            android:alpha="1.0"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/guideline_samples_btn_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/mean_values_main_select_btn"
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:text="@string/back"
            android:textSize="16sp"
            android:padding="0dp"
            android:background="@drawable/mean_values_btn_bg"
            android:layout_marginTop="30dp"
            android:textAllCaps="false"
            android:textColor="#ff707070"
            android:alpha="1.0"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/mean_values_request_txt"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/sample_size_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sample_size_hint"
            android:textColorHint="#707070"
            android:inputType="number"
            android:backgroundTint="#A71B82"
            android:scaleX="0.5"
            android:transformPivotX="200dp"
            android:alpha="1.0"
            android:layout_marginLeft="30dp"
            app:layout_constraintStart_toEndOf="@+id/samples_main_select_btn"
            app:layout_constraintBottom_toBottomOf="@+id/samples_main_select_btn"
            app:layout_constraintTop_toTopOf="@+id/samples_main_select_btn"/>

        <Button
            android:id="@+id/samples_txt_req__ok_btn"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:background="@drawable/text_side_btn_bg"
            android:text="@string/ok"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textColor="#ffffffff"
            android:alpha="1.0"
            app:layout_constraintBottom_toBottomOf="@+id/sample_size_edit"
            app:layout_constraintDimensionRatio="h,2:1"
            app:layout_constraintStart_toEndOf="@+id/sample_size_edit"
            app:layout_constraintTop_toTopOf="@+id/sample_size_edit" />

        <TextView
            android:id="@+id/sample_size_indicate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_size_indicate"
            android:textColor="#ff707070"
            android:layout_marginTop="20dp"
            android:alpha="1.0"
            android:translationY="-20dp"
            app:layout_constraintTop_toBottomOf="@+id/guideline_samples_btn_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/input_sample_size_show"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/input_show_bg"
            android:paddingBottom="2dp"
            android:textAlignment="center"
            android:textColor="#ffffffff"
            android:alpha="1.0"
            android:translationY="-20dp"
            app:layout_constraintBottom_toBottomOf="@+id/sample_size_indicate"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintStart_toEndOf="@+id/sample_size_indicate"
            app:layout_constraintTop_toTopOf="@+id/sample_size_indicate" />

        <TextView
            android:id="@+id/sample_number_indicate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_number_indicate"
            android:textColor="#ff707070"
            android:layout_marginTop="20dp"
            android:alpha="1.0"
            android:translationY="-10dp"
            app:layout_constraintTop_toBottomOf="@+id/guideline_samples_btn_start"
            app:layout_constraintEnd_toEndOf="@+id/sample_size_indicate"/>

        <TextView
            android:id="@+id/input_sample_number_show"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/input_show_bg"
            android:paddingBottom="2dp"
            android:textAlignment="center"
            android:textColor="#ffffffff"
            android:alpha="1.0"
            android:translationY="-10dp"
            app:layout_constraintBottom_toBottomOf="@+id/sample_size_indicate"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintStart_toEndOf="@+id/sample_size_indicate"
            app:layout_constraintTop_toTopOf="@+id/sample_size_indicate" />

        <Button
            android:id="@+id/start_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:alpha="0.0"
            android:background="@drawable/btn_start_bg"
            android:textAllCaps="false"
            android:textColor="#ffffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sample_number_indicate" />

        <EditText
            android:id="@+id/mean_sample_number_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/sample_number_hint"
            android:backgroundTint="#A71B82"
            android:scaleX="1.0"
            android:transformPivotX="200dp"
            android:alpha="1.0"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toEndOf="@+id/mean_values_main_select_btn"
            app:layout_constraintTop_toTopOf="@+id/mean_values_main_select_btn"
            app:layout_constraintBottom_toBottomOf="@+id/mean_values_main_select_btn"/>

        <Button
            android:id="@+id/mean_edit_ok_btn"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:text="@string/ok"
            android:textColor="#ffffffff"
            android:textAllCaps="false"
            android:alpha="1.0"
            android:background="@drawable/text_side_btn_bg"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/mean_sample_number_edit"
            app:layout_constraintTop_toTopOf="@+id/mean_sample_number_edit"
            app:layout_constraintBottom_toBottomOf="@+id/mean_sample_number_edit"/>

        <TextView
            android:id="@+id/mean_sample_number_indicate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_number_indicate"
            android:textColor="#ff707070"
            android:layout_marginTop="20dp"
            android:alpha="1.0"
            android:translationY="-10dp"
            app:layout_constraintTop_toBottomOf="@+id/mean_values_main_select_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/mean_input_sample_number_show"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/input_show_bg"
            android:paddingBottom="2dp"
            android:textAlignment="center"
            android:textColor="#ffffffff"
            android:alpha="1.0"
            android:translationY="-10dp"
            app:layout_constraintBottom_toBottomOf="@+id/mean_sample_number_indicate"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintStart_toEndOf="@+id/mean_sample_number_indicate"
            app:layout_constraintTop_toTopOf="@+id/mean_sample_number_indicate" />

        <Button
            android:id="@+id/mean_start_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textColor="#ffffffff"
            android:background="@drawable/start_button"
            android:layout_marginTop="30dp"
            android:alpha="1.0"
            app:layout_constraintTop_toBottomOf="@+id/mean_sample_number_indicate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </android.support.constraint.motion.MotionLayout>

</android.support.constraint.ConstraintLayout>